# easyINO

./: LICENSE  main.py
arduino/EasyIno/: README.md  library.properties
arduino/EasyIno/examples/AnalogReader/: AnalogReader.ino
arduino/EasyIno/examples/BareMinimum/: BareMinimum.ino
arduino/EasyIno/examples/DHTSensor/: DHTSensor.ino
arduino/EasyIno/examples/LedToggle/: LedToggle.ino
arduino/EasyIno/examples/SensorRead/: SensorRead.ino
arduino/EasyIno/examples/ServoController/: ServoController.ino
arduino/EasyIno/src/: EasyIno.cpp  EasyIno.h
python/: PUBLISHING.md  README.md  cli.py  main.py  pyproject.toml
python/easyino/: __init__.py  core.py
python/easyino.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/examples/python/: analog_logger.py  debugger.py  dht_logger.py  led_gui.py  read_sensor.py  servo_control.py
python/firmware/: EasyIno.cpp  EasyIno.h
